k8s/mysql_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
template:
  metadata:
    labels:
      app: db
  spec:
    containers:
      - name: mysql
        image: mysql:8.4
        ports:
          - containerPort: 3306
        volumeMounts:
          - name: mysql-storage
            mountPath: /var/lib/mysql
    volumes:
      - name: mysql-storage
        persistentVolumeClaim:
          claimName: mysql-data
